--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 }
 
 header {
-  padding: 1rem;
   background: var(--light);
   box-shadow: 0 11px 10px 0 #a3a3a3;
 }
@@ -17,6 +16,10 @@ nav {
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
+}
+
+.schlLogo {
+  margin: 0.4rem;
 }
 
 .schlLogo > img {
@@ -43,9 +46,37 @@ nav {
 /* Home */
 
 #home {
-  background: url(../img/nbps.jpg);
-  height: 100%;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4) url(../img/nbps.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: darken;
+  background-position: center;
   color: var(--light);
   text-align: center;
   padding: 10rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#home > h1 {
+  font-size: var(--hFont);
+  font-weight: 800;
+  margin: 1rem;
+}
+
+#home > p {
+  font-size: var(--pFont);
+  margin: 1rem;
+}
+
+.homeBtn > button {
+  font-size: var(--pFont);
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.4rem;
 }
