--- a/css/utility.css
+++ b/css/utility.css
@@ -6,7 +6,7 @@
   --dark: #000;
   --gray: #faf8ff;
   --purple: #494989;
-  --cream: #e3e2df;
+  --cream: #efeee9;
 
   --pFont: 1.25rem;
   --p2Font: 1.1rem;
