--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   transition: var(--transition);
+  scroll-behavior: smooth;
 }
 
 header {
@@ -315,18 +316,88 @@ nav {
   margin-top: 0.5rem;
 }
 
-.staffSocial > a > i {
+.staffSocial > a > svg {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: var(--pFont);
   border: 2px solid var(--dark);
-  width: 2.3rem;
-  height: 2.3rem;
+  font-size: var(--hFont);
   margin: 0.5rem;
+  padding: 0.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
-.staffSocial > a:hover > i {
-  color: var(--light);
+.staffSocial > a:hover > svg {
   background: var(--theme);
+  color: var(--light);
+}
+
+/* Footer */
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 5rem;
+  padding: 3rem 2rem;
+  background: var(--dark2);
+  cursor: context-menu;
+}
+
+footer > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footerDiv {
+  margin: 0 2rem;
+}
+
+.footerDiv > h2 {
+  color: var(--light);
+  margin-bottom: 1rem;
+  cursor: pointer;
+  /* font-size: var(--h2Font); */
+}
+
+.footerDiv > p {
+  color: var(--gray2);
+  font-size: var(--p2Font);
+  margin: 1rem 0;
+  cursor: pointer;
+}
+
+.footerDiv > p:hover {
+  color: var(--light);
+}
+
+footer > div:nth-child(2) {
+  margin: 3rem 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: var(--p2Font);
+}
+
+footer > div:nth-child(2) > p {
+  color: var(--light);
+  font-weight: 600;
+}
+
+footer > div:nth-child(2) > .footerSocial > a {
+  color: #cad1d7;
+  font-size: 1.5rem;
+  background: #535e6f;
+  padding: 0.4rem;
+  margin: 0.2rem;
+}
+
+footer > div:nth-child(2) > .footerSocial > a:hover {
+  color: var(--dark2);
+  background: var(--themeLight);
 }
