--- a/css/utility.css
+++ b/css/utility.css
@@ -4,7 +4,9 @@
   --themeLight: #ffb055;
   --theme: #0139a0;
   --dark: #000;
+  --dark2: #101a2f;
   --gray: #faf8ff;
+  --gray2: #586177;
   --purple: #494989;
   --cream: #efeee9;
 
@@ -13,7 +15,7 @@
   --h2Font: 1.75rem;
   --h3Font: 1.5rem;
   --hFont: 3rem;
-  --transition: 0.3s all ease-in-out;
+  --transition: 0.2s all linear;
 
   --sectionMargin: 5rem 0 1rem 0;
 }
